mdapi/Custom/objects/Property_Walk__c.object
<CustomObject>
    <fields>
        <fullName>Driveway_Floor__c</fullName>
        <label>Driveway/Floor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electrical_Exposed_Wiring__c</fullName>
        <label>Electrical/Exposed Wiring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Comments__c</fullName>
        <inlineHelpText>Please provide details regarding any item in the Entry that requires repair or attention.</inlineHelpText>
        <label>Entry Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entry_Doors_Knobs_Locks__c</fullName>
        <label>Doors/Knobs/Locks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Flooring_Baseboards__c</fullName>
        <label>Flooring/Baseboards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Light_Fixtures_Fans__c</fullName>
        <label>Light Fixtures/Fans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Switches_Outlets__c</fullName>
        <label>Switches/Outlets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Walls_Ceilings__c</fullName>
        <label>Walls/Ceilings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Faucets_Valves__c</fullName>
        <label>Faucets/Valves</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Faucets_s_Plumbing__c</fullName>
        <label>Faucets(s)/Plumbing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fences_Gates__c</fullName>
        <label>Fences/Gates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Front_yard_Exterior_Comments__c</fullName>
        <inlineHelpText>Please provide details regarding any item in the Front yard that requires repair or attention.</inlineHelpText>
        <label>Front yard/Exterior Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Furnace_Thermostat__c</fullName>
        <label>Furnace/Thermostat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Garage_Cabinets_Counters__c</fullName>
        <label>Garage Cabinets/Counters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Garage_Door__c</fullName>
        <label>Garage Door</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Garage_Light_Fixtures__c</fullName>
        <label>Light Fixtures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Garage_Parking_Comments__c</fullName>
        <inlineHelpText>Please provide details regarding any item in the Garage/Parking that requires repair or attention.</inlineHelpText>
        <label>Garage/Parking Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hall_Closets_Cabinets__c</fullName>
        <label>Closets/Cabinets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hall_Flooring_Baseboards__c</fullName>
        <label>Flooring/Baseboards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hall_Light_Fixtures__c</fullName>
        <label>Light Fixtures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hall_Railings_Banister__c</fullName>
        <label>Railings/Banister</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hall_Stairs_Comments__c</fullName>
        <inlineHelpText>Please provide details regarding any item in the Hall/Stairs that requires repair or attention.</inlineHelpText>
        <label>Hall/Stairs Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hall_Switches_Outlets__c</fullName>
        <label>Switches/Outlets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hall_Walls_Ceiling__c</fullName>
        <label>Walls/Ceiling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IH_Inspector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IH Inspector</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Walks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inspected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the user that performed the Rent Ready checklist.  This will usually be the Listing Agent.</inlineHelpText>
        <label>Inspected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rent_Ready_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <inlineHelpText>This is the date the inspection was performed.  Should be within 24 hours of the assignment by the Leasing Manager.</inlineHelpText>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kitchen_Comments__c</fullName>
        <inlineHelpText>Please provide details regarding any item in the Kitchen that requires repair or attention.</inlineHelpText>
        <label>Kitchen Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kitchen_Flooring_Baseboards__c</fullName>
        <label>Flooring/Baseboards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kitchen_Light_Fixtures__c</fullName>
        <label>Light Fixtures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kitchen_Switches_Outlets__c</fullName>
        <label>Switches/Outlets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kitchen_Walls_Ceilings__c</fullName>
        <label>Walls/Ceilings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kitchen_Windows_Locks_Screens__c</fullName>
        <label>Windows/Locks/Screens</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LR_Doors_Knobs_Locks__c</fullName>
        <label>Doors/Knobs/Locks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LR_Fireplace_Equipment__c</fullName>
        <label>Fireplace/Equipment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LR_Flooring_Baseboards__c</fullName>
        <label>Flooring/Baseboards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LR_Light_Fixtures_Fans__c</fullName>
        <label>Light Fixtures/Fans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LR_Switches_Outlets__c</fullName>
        <label>Switches/Outlets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LR_Walls_Ceilings__c</fullName>
        <label>Walls/Ceilings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LR_Window_Coverings__c</fullName>
        <label>Window Coverings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LR_Windows_Locks_Screens__c</fullName>
        <label>Windows/Locks/Screens</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landscaping__c</fullName>
        <label>Landscaping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Laundry_Comments__c</fullName>
        <inlineHelpText>Please provide details regarding any item in the Laundry that requires repair or attention.</inlineHelpText>
        <label>Laundry Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Living_Room_Comments__c</fullName>
        <inlineHelpText>Please provide details regarding any item in the Living Room that requires repair or attention.</inlineHelpText>
        <label>Living Room Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mailbox__c</fullName>
        <label>Mailbox</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Closets_Doors_Tracks__c</fullName>
        <label>Closets/Doors/Tracks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Doors_Knobs_Locks__c</fullName>
        <label>Doors/Knobs/Locks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Doors__c</fullName>
        <label>Other Doors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Flooring_Baseboards__c</fullName>
        <label>Flooring/Baseboards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Light_Fixtures_Fans__c</fullName>
        <label>Light Fixtures/Fans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Room_Comments__c</fullName>
        <inlineHelpText>Please provide details regarding any item in the Other Room that requires repair or attention.</inlineHelpText>
        <label>Other Room Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Storage_Shelving__c</fullName>
        <label>Storage/Shelving</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Switches_Outlets__c</fullName>
        <label>Switches/Outlets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>